fix search button contrast issues + redesign button #70

--- a/src/components/MainNav/styles.css
+++ b/src/components/MainNav/styles.css
@@ -13,6 +13,7 @@
 .main__search {
     @apply top-0;
     @apply -ml-0.5;
+    @apply mr-6;
 }
 
 .main__nav {
